Bug 1666843 - Clear mFocusedWindow while burring; r=hsivonen

The expectation is that the blurring would eventually result in an IPC message
doing this anyway, but this doesn't happen if the focus is in OOP iframe which
won't try to bounce an IPC message to its parent frame.

Differential Revision: https://phabricator.services.mozilla.com/D93210